[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ESPPresso"
version = "0.1.0"
description = "Beancount plugin to compute ordinary income for ESPP dispositions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["beancount>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
